feat: implemented release management & versioning
